# pointer

./: .gitignore  3dimgemm.c  alignment_stack_var.c  arginput.py  blockmemcpy.cpp  count_ymm.c  cuda_main.cpp  gemm.c  gemm_ABc.c  gemm_ABc.s  gemm_complex.c  gemm_complex_malloc.c  gemm_varlen.c  int16tofloat32.cpp  int16tofloat32.s  kernel_test.cu  matrixMultiplyBlas.c  matrix_transpose.cpp  matrix_transpose_avx256.cpp  memcpy_asm.c  memcpy_asm.s  memcpy_asm_empty.c  memcpy_asm_empty.s  mymemset.c  mymemset.s  npy.py  ompmaxthreads.c  pointer_2darray.c  pointer_array.c  ptrset.c  pyproject.toml  read1darray  read1darray.c  sampledata2.b  sampledata2.npy  sampledata3.b  sampledata3.npy  test_1darray_byc.b  threadTest.c  transpose.h  (+6 more)
2dMatrixTranspose/: DWORDTranspose.c  Hword.h  QWORDTranspose.c  dword.h  qword.h  transpose.c  transpose.h  types.h
cublas/simple_cublas_gemm/: sample_cublas_sgemm.cu
cublas_speed_test/: cblas_col_speed_test.cpp  cblas_row_speed_test.cpp  cublas_speed_test.cu  utils.cpp  utils.h
dgemm_jyam45/: Makefile
dgemm_jyam45/test/: check_matrix.c  dgemm_test.h
ordered_thread_pool/sonnet3.7/: sample1.cpp
r000ps-bad/: 2878226.dataLim  r000ps-bad.vtune
r000ps-bad/config/: collection.cfg  context_values.cfg  runss.options
r001ps/: r001ps.vtune
r001ps/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
r001ps/data.0/: 2880936-2880941.0-2880941.0.th  (+3 more)
thread_pool/: a.out  simple_threadpool.cpp  single_queue_multi_worker.cpp  single_queue_multi_worker.md  sonnet3_7-threadpool.cpp  sonnet3_7-threadpool.md
(+10 files in other folders)
