[tool.poetry]
name = "pointer"
version = "0.1.0"
description = ""
authors = ["Masaya-Sakamoto <masaya-sakamoto@kke.co.jp>"]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
numpy = "^1.26.4"
tensorflow-io-gcs-filesystem = "^0.37.1"
tensorflow = "^2.15.1"
sionna = "^0.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
